# Royal-Blocks

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  CMakeCache.txt  CMakeLists.txt  LICENSES_THIRD_PARTY.md  Makefile  NOTES.md  PKGBUILD  README.md  TODO.md  TODOs.md  example.txt  main.cpp
lib/: CMakeLists.txt
lib/Bcrypt.cpp/: CMakeLists.txt
src/client/: CMakeLists.txt  client.cpp  client.hpp  gui.cpp  main.cpp  makefile  server  tui.cpp
src/client/controller/: controller.cpp  controller.hpp
src/client/core/: game_state_wrapper.hpp
src/client/core/controller/: controller.cpp  controller.hpp  update_type.hpp
src/client/core/effects/: timed_bonus.cpp  timed_penalty.cpp  timed_penalty.hpp
src/client/core/game_state/: game_state.hpp
src/client/core/in_game/: game_state_wrapper.hpp
src/client/core/network/: network_manager.cpp  network_manager.hpp
src/client/core/player_state/: player_state_external.hpp  player_state_self.cpp  player_state_self.hpp
src/client/core/player_tetris/: player_tetris_self.hpp
src/client/core/server_info/: server_info.cpp  server_info.hpp
src/client/core/tetris/: tetris_external.cpp  tetris_external.hpp  tetris_self.cpp  tetris_self.hpp
src/client/core/tetromino/: tetromino.hpp
src/client/core/tetromino_queue/: tetromino_queue.cpp  tetromino_queue.hpp
src/client/graphics/: IFriends_Manager.hpp  IGame.hpp  IGame_Menu.hpp  ILogin_Input.hpp  IMain_Menu.hpp  IMessage.hpp  color.hpp  dataExample.hpp  interfaceConstants.hpp  screen_manager.cpp  screen_manager.hpp
src/client/graphics/GUI/: logingui.cpp  main_gui.cpp  main_gui.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ranking.cpp  ranking.hpp  tetris_window.cpp  tetris_window.hpp
src/client/graphics/TUI/: .gitignore  main_tui.cpp  main_tui.hpp  screen_manager.cpp  screen_manager.hpp
src/client/graphics/common/: abstract_display.cpp  abstract_display.hpp  abstract_game_display.cpp  abstract_game_display.hpp
src/client/network/: network_manager.cpp  network_manager.hpp
src/client/view/: IFriends_Manager.hpp  IGame.hpp  IGame_Menu.hpp  ILogin_Input.hpp  ILogin_Menu.hpp  IMain_Menu.hpp  IMessage.hpp  dataExample.hpp  gameState.hpp  interfaceConstants.hpp  playerState.cpp  playerState.hpp
src/client/view/TUI/: .gitignore  CMakeLists.txt  Makefile  file.txt  game_display.cpp  game_display.hpp  login_input.cpp  login_input.hpp  login_menu.cpp  login_menu.hpp  main  main.cpp  menu_ui.cpp  menu_ui.hpp  screen_manager.cpp  screen_manager.hpp  test.cpp  tui_manager.cpp  tui_manager.hpp
src/common/tetris_lib/: CMakeLists.txt
src/common/tetris_lib/board/: board.cpp  board.hpp  board_update.cpp  board_update.hpp  grid_cell.cpp  grid_cell.hpp
src/common/tetris_lib/grid/: print_grid.hpp
src/common/tetris_lib/queue/: queue.hpp
src/common/tetris_lib/serializable_queue/: serializable_queue.hpp
src/common/tetris_lib/tetris/: tetris.cpp  tetris.hpp  tetris_observer.hpp
src/common/tetris_lib/tetromino/: abstract_tetromino.cpp  abstract_tetromino.hpp  tetromino.cpp  tetromino.hpp  tetromino_shapes.cpp  tetromino_shapes.hpp
src/common/tetris_lib/tetromino_queue/: tetromino_queue.cpp  tetromino_queue.hpp
src/common/tetris_lib/vec2/: vec2.cpp  vec2.hpp
src/common/tetris_royal_lib/: CMakeLists.txt
src/common/tetris_royal_lib/effect/: abstract_effect.hpp  abstract_timed_effect.hpp  effect_type.cpp  effect_type.hpp  placement_timed_effect.cpp  placement_timed_effect.hpp  tick_timed_effect.cpp  tick_timed_effect.hpp
src/common/tetris_royal_lib/effect_price/: effect_price.cpp  effect_price.hpp
src/common/tetris_royal_lib/effect_selector/: effect_selector.cpp  effect_selector.hpp
src/common/tetris_royal_lib/foo/: foo.hpp
src/common/tetris_royal_lib/game_engine/: game_engine.cpp  game_engine.hpp
src/common/tetris_royal_lib/game_mode/: game_mode.cpp  game_mode.hpp
src/common/tetris_royal_lib/game_state/: game_state.cpp  game_state.hpp  game_state_view.hpp
src/common/tetris_royal_lib/player_state/: player_state.cpp  player_state.hpp
src/common/tetris_royal_lib/player_tetris/: player_tetris.cpp  player_tetris.hpp
src/server/: CMakeLists.txt  main.cpp
src/server/account_service/: account_service.cpp  account_service.hpp
src/server/client_link/: client_link.cpp  client_link.hpp
src/server/client_manager/: client_manager.cpp  client_manager.hpp
src/server/database/: CMakeLists.txt  config.cpp  config.hpp  main.cpp
src/server/database/account_manager/: account_manager.cpp  account_manager.hpp
src/server/database/database_manager/: database_manager.cpp  database_manager.hpp
src/server/database/friends_manager/: friends_manager.cpp  friends_manager.hpp
src/server/database/messages_manager/: messages_manager.cpp  messages_manager.hpp
src/server/gameServer/: gameServer.cpp  gameServer.hpp  game_server.cpp  game_server.hpp  main.cpp
src/server/game_server/: CMakeLists.txt  game_server.cpp  game_server.hpp  main.cpp
src/server/game_server/juliette/: game_server_cpp.old  game_server_hpp.old
src/server/games_manager/: games_manager.cpp  games_manager.hpp
src/server/matchmaking/: matchmaking.cpp  matchmaking.hpp
src/server/network/: CMakeLists.txt  main.cpp  network.cpp  network.hpp
src/server/network/client_link/: client_link.cpp  client_link.hpp
src/server/network/client_manager/: client_manager.cpp  client_manager.hpp
src/server/network/games_manager/: games_manager.cpp  games_manager.hpp
src/server/server_bindings/: remove_client.hpp
src/server/social_service/: social_service.cpp  social_service.hpp
src/server/tetris_main_server/: tetris_main_server.cpp  tetris_main_server.hpp
test/: CMakeLists.txt  main.cpp  test_board.cpp  test_board.hpp  test_coordinate.cpp  test_coordinate.hpp  test_tetramino.cpp  test_tetris.cpp  test_tetris.hpp  test_tetromino.cpp  test_tetromino.hpp  test_vec2.cpp  test_vec2.hpp  utils.cpp  utils.hpp
test/account_manager/: test.cpp  test.hpp
test/database/: main.cpp  test.cpp  test.hpp  test_db
test/friends_manager/: test.cpp  test.hpp
test/server/database/: Makefile
(+484 files in other folders)
